fixing display of x-axis on mobile

--- a/ sass/layout.scss
+++ b/ sass/layout.scss
@@ -13,7 +13,6 @@
 #change-dates {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
 }
 
